# TeleLog

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  manage.py  pyproject.toml  run_bot.py
.envs/dev/: .django.example  .postgres
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  test.py
docker/dev/django/: Dockerfile
docker/dev/postgres/: Dockerfile
src/authentication/: models.py  services.py  urls.py  views.py
src/authentication/migrations/: 0001_initial.py
src/core/: middleware.py  urls.py  views.py
src/telegram/: bot.py
src/telegram/management/commands/: run_bot.py
src/telelog/: apps.py  middleware.py  models.py  urls.py
src/telelog/auth/: bot.py  webhook.py
src/telelog/management/commands/: runbot.py
src/telelog/migrations/: 0001_initial.py  0002_initial.py
src/telelog/views/: __init__.py  auth.py  main.py  webhook.py
src/templates/: base.html
src/templates/authentication/: login.html  login_failed.html
src/templates/core/: dashboard.html
src/templates/telelog/: login.html  main.html
src/users/: models.py
src/users/migrations/: 0001_initial.py
tests/: conftest.py
tests/factories/: users.py
tests/unit/: test_auth_service.py
