[project]
name = "telelog"
version = "0.1.0"
description = "Telegram Authentication System for Django"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Denis 🦊 (TheFoxKD)", email = "krishtopadenis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "django-environ>=0.11.2",
    "django>=5.1.3",
    "psycopg>=3.2.3",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.8",
    "whitenoise>=6.8.2",
    "django-redis>=5.4.0",
    "python-jose>=3.3.0",
    "asgiref>=3.8.1",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Security :: Authentication"
]
keywords = ["django", "telegram", "authentication", "oauth", "bot"]


[project.optional-dependencies]
dev = [
    "pytest-django>=4.9.0",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
    "watchdog>=6.0.0",
]
prod = [
    "gunicorn>=23.0.0",
]

[tool.ruff]
target-version = "py312"

[dependency-groups]
dev = [
    "django-extensions>=3.2.3",
    "werkzeug>=3.1.3",
]
